--- a/app/src/main/res/drawable/chat_bubble2.xml
+++ b/app/src/main/res/drawable/chat_bubble2.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/dark_gray" />
+        android:color="@color/navy" />
 
     <corners
         android:radius="50dp" />
