--- a/app/src/main/res/layout/chatting_detail.xml
+++ b/app/src/main/res/layout/chatting_detail.xml
@@ -10,97 +10,91 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" >
-
-        <TextView
-            android:id="@+id/nickName"
-            android:text="닉네임"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="21sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"/>
     </androidx.appcompat.widget.Toolbar>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeftSec"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.12"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95"/>
+
+    <ImageView
+        android:id="@+id/sportsImg"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/profileshape"
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeftSec"
+        app:layout_constraintTop_toTopOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>
+
+    <TextView
+        android:id="@+id/nickName"
+        android:text="닉네임"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        app:layout_constraintTop_toTopOf="@+id/sportsImg"
+        app:layout_constraintLeft_toRightOf="@+id/sportsImg"
+        app:layout_constraintBottom_toTopOf="@+id/pin"/>
+
+    <ImageView
+        android:id="@+id/pin"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:src="@drawable/icon_pin2"
+        app:layout_constraintTop_toBottomOf="@+id/nickName"
+        app:layout_constraintLeft_toLeftOf="@+id/nickName"
+        app:layout_constraintBottom_toBottomOf="@+id/sportsImg"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="장소명"
+        android:textColor="@color/dark_gray"
+        android:textSize="12sp"
+        android:layout_marginLeft="6dp"
+        app:layout_constraintLeft_toRightOf="@id/pin"
+        app:layout_constraintTop_toTopOf="@id/pin"
+        app:layout_constraintBottom_toBottomOf="@id/pin"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ing"
+        android:text="대결중"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        app:layout_constraintRight_toRightOf="@+id/guidelineRight"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"/>
+
     <View
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/light_gray"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:id="@+id/top"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/recyclerViewChat">
-
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_margin="20dp"
-            android:id="@+id/sportsImg"
-            android:background="@mipmap/ic_launcher_round"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@id/top"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:id="@+id/ing"
-            android:text="대결중"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"
-            app:layout_constraintLeft_toRightOf="@id/sportsImg"
-            app:layout_constraintTop_toTopOf="@id/sportsImg"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:id="@+id/title"
-            android:text="제목"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintLeft_toRightOf="@+id/ing"
-            app:layout_constraintBottom_toBottomOf="@id/ing"
-            app:layout_constraintTop_toTopOf="@id/ing"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:id="@+id/pin"
-            android:src="@drawable/icon_pin2"
-            android:layout_marginLeft="25dp"
-            app:layout_constraintLeft_toRightOf="@id/sportsImg"
-            app:layout_constraintBottom_toBottomOf="@id/sportsImg"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="장소"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintLeft_toRightOf="@id/pin"
-            app:layout_constraintTop_toTopOf="@id/pin"
-            app:layout_constraintBottom_toBottomOf="@id/pin"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/light_gray"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/recyclerViewChat"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewChat"
@@ -109,34 +103,38 @@
         android:divider="#000000"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="12dp"
         android:transcriptMode="alwaysScroll"
-        app:layout_constraintTop_toBottomOf="@id/top"
+        app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintBottom_toTopOf="@id/msgEdit"/>
 
     <EditText
-        android:hint="메세지를 입력하세요"
         android:id="@+id/msgEdit"
+        android:elevation="30dp"
+        android:hint="메세지를 입력하세요"
         android:inputType="textMultiLine"
         android:maxLines="4"
         android:paddingLeft="10dp"
-        android:background="@drawable/edittext_custom"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="5dp"
+        android:background="@drawable/chat_edittext"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="10dp"
         android:layout_width="0dp"
         android:layout_height="45dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/send_btn"
-        />
-    
+        app:layout_constraintRight_toLeftOf="@id/send_btn" />
+
+    <!--TODO: foreground에 드로우어블 추가-->
     <Button
         android:id="@+id/send_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="전 송"
-        android:layout_margin="10dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+
+        android:foreground="@drawable/chat_drawable_send"
+        android:foregroundGravity="center"
+        android:background="@drawable/btn_chat_send"
+        app:layout_constraintTop_toTopOf="@id/msgEdit"
+        app:layout_constraintRight_toRightOf="@id/guidelineRight"
+        app:layout_constraintBottom_toBottomOf="@+id/msgEdit"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
