--- a/app/src/main/res/layout/chatting_left_text.xml
+++ b/app/src/main/res/layout/chatting_left_text.xml
@@ -10,26 +10,30 @@
         android:layout_height="wrap_content"
         android:id="@+id/chatNickOther"
         android:text="NickName"
+        android:textColor="@color/dark_gray"
+        android:textSize="12sp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginBottom="5dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/chatTextOther"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
         android:id="@+id/chatTextOther"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/chatTextOther"
+        app:layout_constraintTop_toBottomOf="@+id/chatNickOther"
+        app:layout_constraintLeft_toLeftOf="@+id/chatNickOther"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/chat_bubble"
         android:text="안녕하세요"
+        android:textSize="13sp"
         android:textColor="@color/white"
-        android:padding="13dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -37,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/chatTextOther"
-        android:textSize="15dp"
+        android:textSize="10sp"
         android:text="12:20pm"
         app:layout_constraintBottom_toBottomOf="@id/chatTextOther"
         android:layout_marginLeft="5dp"/>
