--- a/app/src/main/res/layout/chatting_right_text.xml
+++ b/app/src/main/res/layout/chatting_right_text.xml
@@ -16,9 +16,13 @@
         android:background="@drawable/chat_bubble2"
         android:text="안녕하세요"
         android:textColor="@color/black"
-        android:padding="13dp"
+        android:textSize="13sp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginRight="12dp"
         android:layout_marginBottom="10dp"
         tools:ignore="MissingConstraints" />
 
@@ -28,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toLeftOf="@id/chatTextMy"
-        android:textSize="15dp"
+        android:textSize="10sp"
         android:text="12:20pm"
         app:layout_constraintBottom_toBottomOf="@id/chatTextMy"
         android:layout_marginRight="5dp"/>
