--- a/app/src/main/res/layout/home_posting_detail.xml
+++ b/app/src/main/res/layout/home_posting_detail.xml
@@ -11,14 +11,38 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95"/>
+
+    <!--TODO: 버튼 디자인 바꿀 예정-->
+    <Button
+        android:id="@+id/btnChat"
+        android:text="채팅걸기"
+        android:textSize="12sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/toolbar"
+        app:layout_constraintRight_toRightOf="@+id/guidelineRight"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgProfile"
         android:src="@mipmap/ic_launcher"
         android:layout_width="63dp"
         android:layout_height="63dp"
-        android:layout_margin="24dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintLeft_toLeftOf="@id/toolbar"/>
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"/>
 
     <TextView
         android:id="@+id/textName"
@@ -42,8 +66,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/imgProfile"
-        app:layout_constraintLeft_toLeftOf="@+id/imgProfile"
-        app:layout_constraintRight_toRightOf="@+id/more"/>
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+        app:layout_constraintRight_toRightOf="@+id/guidelineRight"/>
 
     <TextView
         android:id="@+id/textTime"
@@ -53,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@+id/imgLike"
-        app:layout_constraintLeft_toLeftOf="@+id/textContent"
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
         app:layout_constraintBottom_toBottomOf="@+id/imgLike"/>
 
     <ImageView
@@ -61,9 +85,8 @@
         android:src="@drawable/icon_more"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginRight="24dp"
         app:layout_constraintTop_toTopOf="@+id/textName"
-        app:layout_constraintRight_toRightOf="@id/toolbar"
+        app:layout_constraintRight_toRightOf="@id/guidelineRight"
         app:layout_constraintBottom_toBottomOf="@id/textName"/>
 
     <ImageView
@@ -94,6 +117,6 @@
         android:layout_height="wrap_content"
         android:background="@drawable/imgview_category_bg_custom2"
         app:layout_constraintBottom_toBottomOf="@+id/imgLike"
-        app:layout_constraintRight_toRightOf="@+id/more"
+        app:layout_constraintRight_toRightOf="@+id/guidelineRight"
         app:layout_constraintTop_toTopOf="@+id/imgLike" />
 </androidx.constraintlayout.widget.ConstraintLayout>
