--- a/app/src/main/res/layout/home_posting_detail.xml
+++ b/app/src/main/res/layout/home_posting_detail.xml
@@ -38,7 +38,7 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgProfile"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/noprofile"
         android:layout_width="63dp"
         android:layout_height="63dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -49,7 +49,7 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:text="아이디"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
