--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -23,6 +23,52 @@
             tools:ignore="RtlHardcoded" />
     </androidx.appcompat.widget.Toolbar>
 
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/btnGolf"
+            android:text="골프"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/dark_gray"
+            android:button="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="9dp"
+            android:background="@drawable/radiobtn_category_custom"/>
+        <RadioButton
+            android:id="@+id/btnBowling"
+            android:text="볼링"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/dark_gray"
+            android:button="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="9dp"
+            android:background="@drawable/radiobtn_category_custom"/>
+        <RadioButton
+            android:id="@+id/btnPingpong"
+            android:text="탁구"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/dark_gray"
+            android:button="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="9dp"
+            android:background="@drawable/radiobtn_category_custom"/>
+
+    </RadioGroup>
+
+
+
 
 
     <ImageView
@@ -182,7 +228,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
-        android:id="@+id/rank"
+        android:id="@+id/myrank"
         android:text="0"
         android:textStyle="bold"
         android:textColor="@color/dark_gray"
