--- a/app/src/main/res/drawable/radiobtn_category_custom.xml
+++ b/app/src/main/res/drawable/radiobtn_category_custom.xml
@@ -12,7 +12,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/navy"/>
             <corners android:radius="24dp"/>
-            <stroke android:width="1dp" android:color="@color/gray"/>
+            <stroke android:width="1dp" android:color="@color/navy"/>
             <padding android:top="9dp" android:bottom="9dp" android:left="18dp" android:right="18dp"/>
         </shape>
     </item>
