--- a/app/src/main/res/layout/home_recyclerview_item.xml
+++ b/app/src/main/res/layout/home_recyclerview_item.xml
@@ -4,63 +4,77 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95"/>
+
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_profile"
+        android:id="@+id/imgProfile"
         android:src="@mipmap/ic_launcher"
         android:layout_width="63dp"
         android:layout_height="63dp"
-        android:layout_margin="24dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"/>
 
     <TextView
-        android:id="@+id/text_name"
+        android:id="@+id/textName"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:text="아이디"
+        android:text="User Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/img_profile"/>
+        android:layout_marginLeft="24dp"
+        app:layout_constraintTop_toTopOf="@id/imgProfile"
+        app:layout_constraintLeft_toRightOf="@+id/imgProfile"/>
 
     <!--TODO: 새로 추가된 애들-->
     <TextView
-        android:id="@+id/text_time"
+        android:id="@+id/textTime"
         android:text="2023.09.18"
         android:textColor="@color/dark_gray"
         android:textSize="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="9dp"
-        app:layout_constraintTop_toTopOf="@+id/text_name"
-        app:layout_constraintLeft_toRightOf="@+id/text_name"/>
+        app:layout_constraintTop_toTopOf="@+id/textName"
+        app:layout_constraintLeft_toRightOf="@+id/textName"/>
 
     <TextView
-        android:id="@+id/text_content"
+        android:id="@+id/textContent"
         android:maxLines="3"
         android:ellipsize="end"
-        android:text="게시글 내용"
+        android:text="content"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/text_name"
-        app:layout_constraintLeft_toLeftOf="@+id/text_name"
+        app:layout_constraintTop_toBottomOf="@+id/textName"
+        app:layout_constraintLeft_toLeftOf="@+id/textName"
         app:layout_constraintRight_toRightOf="@+id/more"/>
 
     <ImageView
-        android:id="@+id/img_like"
+        android:id="@+id/imgLike"
         android:src="@drawable/selector_icon_heart"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/text_content"
-        app:layout_constraintRight_toLeftOf="@+id/text_like"/>
+        app:layout_constraintTop_toBottomOf="@+id/textContent"
+        app:layout_constraintRight_toLeftOf="@+id/textLike"/>
 
     <TextView
-        android:id="@+id/text_like"
+        android:id="@+id/textLike"
         android:textStyle="bold"
         android:text="0"
         android:textColor="@color/black"
@@ -68,27 +82,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="9dp"
-        app:layout_constraintTop_toTopOf="@+id/img_like"
-        app:layout_constraintRight_toLeftOf="@+id/img_category"
-        app:layout_constraintBottom_toBottomOf="@+id/img_like"/>
+        app:layout_constraintTop_toTopOf="@+id/imgLike"
+        app:layout_constraintRight_toLeftOf="@+id/imgCategory"
+        app:layout_constraintBottom_toBottomOf="@+id/imgLike"/>
 
     <ImageView
-        android:id="@+id/img_category"
+        android:id="@+id/imgCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/imgview_category_bg_custom2"
-        app:layout_constraintBottom_toBottomOf="@+id/img_like"
+        app:layout_constraintBottom_toBottomOf="@+id/imgLike"
         app:layout_constraintRight_toRightOf="@+id/more"
-        app:layout_constraintTop_toTopOf="@+id/img_like" />
+        app:layout_constraintTop_toTopOf="@+id/imgLike" />
 
     <ImageView
         android:id="@+id/more"
         android:src="@drawable/icon_more"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_margin="24dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
 
     <View
         android:id="@+id/line"
@@ -96,7 +110,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/img_like"
+        app:layout_constraintTop_toBottomOf="@+id/imgLike"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
