--- a/app/src/main/res/layout/mypage_match_item1.xml
+++ b/app/src/main/res/layout/mypage_match_item1.xml
@@ -6,50 +6,56 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95"/>
+
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
-        android:layout_width="70sp"
-        android:layout_height="70sp"
+        android:id="@+id/profileImage"
+        android:layout_width="63dp"
+        android:layout_height="63dp"
         android:src="@drawable/bedge_icon"
         app:civ_border_width="2dp"
         app:civ_border_color="#FFFFFF"
-        android:layout_marginLeft="25sp"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="10sp"
-        android:layout_gravity="center"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />
 
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/textName"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:text="우리동네에서 농구 2:2로 할 사람 있나요 거1231"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:ellipsize="end"
         android:maxLength="23"
-        android:layout_marginTop="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/profile_image"
-        android:layout_marginLeft="10sp"
-        />
+        app:layout_constraintTop_toTopOf="@id/profileImage"
+        app:layout_constraintLeft_toRightOf="@id/profileImage"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:id="@+id/town"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="홍운동"
+        android:text="홍은동"
         android:textColor="@color/dark_gray"
         android:textSize="12sp"
-        android:layout_marginTop="5sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
-        app:layout_constraintLeft_toRightOf="@id/profile_image"
-        android:layout_marginLeft="10sp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/textName"
+        app:layout_constraintLeft_toRightOf="@id/profileImage"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:id="@+id/upload_time"
@@ -58,55 +64,49 @@
         android:text="4일 전"
         android:textColor="@color/dark_gray"
         android:textSize="12sp"
-        android:layout_marginTop="5sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
+        app:layout_constraintTop_toBottomOf="@id/textName"
         app:layout_constraintLeft_toRightOf="@id/town"
-        android:layout_marginLeft="10sp"
-        />
+        android:layout_marginLeft="9dp" />
 
 
     <ImageButton
-        android:id="@+id/more_btn"
-        android:layout_marginTop="20sp"
-        android:layout_marginRight="20sp"
-        android:layout_width="30sp"
-        android:layout_height="30sp"
+        android:id="@+id/moreBtn"
+        android:layout_marginTop="24dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:background="@drawable/icon_more"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintRight_toRightOf="@id/guidelineRight" />
 
     <ImageView
-        android:id="@+id/im_state"
-        android:layout_width="62dp"
-        android:layout_height="23dp"
+        android:id="@+id/imgState"
+        android:layout_width="60dp"
+        android:layout_height="24dp"
         android:background="@drawable/match_state2"
         app:layout_constraintTop_toBottomOf="@id/town"
         app:layout_constraintLeft_toLeftOf="@id/town"
-        android:layout_marginTop="10sp"
-        />
-
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray"
-        app:layout_constraintTop_toBottomOf="@id/im_state"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="30sp"
-        />
+        android:layout_marginTop="9dp" />
 
     <Button
-        android:id="@+id/review_btn"
+        android:id="@+id/reviewBtn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="24dp"
         android:background="@color/white"
         android:text="매칭 완료하기"
+        android:textSize="12sp"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/imgState" />
+
+    <View
+        android:id="@+id/lineSec"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@color/light_gray"
+        app:layout_constraintTop_toBottomOf="@id/reviewBtn"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <!--    TODO 서연이가 하트 작업할거임.-->
 
