--- a/app/src/main/res/layout/chatting_recyclerview_item.xml
+++ b/app/src/main/res/layout/chatting_recyclerview_item.xml
@@ -4,49 +4,56 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/imgView_chat"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgChat"
         android:src="@mipmap/ic_launcher"
         android:layout_width="63dp"
         android:layout_height="63dp"
-        android:layout_margin="24dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"/>
 
     <TextView
+        android:id="@+id/nameChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/name_chat"
-        android:text="닉네임"
-        android:textSize="20sp"
+        android:text="User Name"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:layout_margin="24dp"
-        app:layout_constraintLeft_toRightOf="@id/imgView_chat"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/add_chat"
-        android:text="홍은동"
-        android:textSize="15sp"
-        android:textColor="#737373"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="27dp"
-        app:layout_constraintLeft_toRightOf="@id/name_chat"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/chat_chat"
-        android:text="채팅 내용"
-        android:textSize="18sp"
         android:layout_marginLeft="24dp"
-        app:layout_constraintLeft_toRightOf="@id/imgView_chat"
-        app:layout_constraintTop_toBottomOf="@id/name_chat"/>
+        app:layout_constraintLeft_toRightOf="@id/imgChat"
+        app:layout_constraintTop_toTopOf="@id/imgChat"/>
+
+    <TextView
+        android:id="@+id/add_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="홍은동"
+        android:textSize="13sp"
+        android:textColor="@color/dark_gray"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintLeft_toRightOf="@id/nameChat"
+        app:layout_constraintTop_toTopOf="@id/nameChat"/>
+
+
+    <TextView
+        android:id="@+id/chatContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="chatting content"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:layout_marginLeft="24dp"
+        app:layout_constraintLeft_toRightOf="@id/imgChat"
+        app:layout_constraintTop_toBottomOf="@id/nameChat"/>
 
 
     <View
@@ -55,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/chat_chat"
+        app:layout_constraintTop_toBottomOf="@+id/chatContent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
