--- a/app/src/main/res/layout/home_posting_detail.xml
+++ b/app/src/main/res/layout/home_posting_detail.xml
@@ -28,17 +28,20 @@
     <!--TODO: 버튼 디자인 바꿀 예정-->
     <Button
         android:id="@+id/btnChat"
+        android:background="@drawable/home_posting_detail_chatbtn"
+        android:includeFontPadding="false"
         android:text="채팅걸기"
-        android:textSize="12sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textSize="9sp"
+        android:textColor="@color/white"
+        android:layout_width="66dp"
+        android:layout_height="32dp"
         app:layout_constraintTop_toTopOf="@id/toolbar"
         app:layout_constraintRight_toRightOf="@+id/guidelineRight"
         app:layout_constraintBottom_toBottomOf="@id/toolbar"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgProfile"
-        android:src="@drawable/noprofile"
+        android:src="@mipmap/ic_launcher"
         android:layout_width="63dp"
         android:layout_height="63dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -49,13 +52,13 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:text=""
+        android:text="User Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
         app:layout_constraintTop_toTopOf="@id/imgProfile"
         app:layout_constraintLeft_toRightOf="@+id/imgProfile"
-        app:layout_constraintBottom_toBottomOf="@+id/imgProfile"/>
+        app:layout_constraintBottom_toTopOf="@+id/textTime"/>
 
     <TextView
         android:id="@+id/textContent"
@@ -73,12 +76,12 @@
         android:id="@+id/textTime"
         android:text="2023.09.18"
         android:textColor="@color/dark_gray"
-        android:textSize="15sp"
+        android:textSize="12sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/imgLike"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintBottom_toBottomOf="@+id/imgLike"/>
+        app:layout_constraintTop_toBottomOf="@+id/textName"
+        app:layout_constraintLeft_toLeftOf="@+id/textName"
+        app:layout_constraintBottom_toBottomOf="@+id/imgProfile"/>
 
     <ImageView
         android:id="@+id/more"
@@ -103,7 +106,7 @@
         android:textStyle="bold"
         android:text="0"
         android:textColor="@color/black"
-        android:textSize="15sp"
+        android:textSize="12sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="9dp"
